; ModuleID = '/home/carl/AnghaBench/freebsd/sys/crypto/rijndael/extr_rijndael-api-fst.c_rijndael_cipherInit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/crypto/rijndael/extr_rijndael-api-fst.c_rijndael_cipherInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@MODE_ECB = common dso_local global i64 0, align 8
@MODE_CBC = common dso_local global i64 0, align 8
@MODE_CFB1 = common dso_local global i64 0, align 8
@BAD_CIPHER_MODE = common dso_local global i32 0, align 4
@RIJNDAEL_MAX_IV_SIZE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rijndael_cipherInit(%struct.TYPE_3__* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i64, i64* %6, align 8
  %9 = load i64, i64* @MODE_ECB, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %19, label %11

11:                                               ; preds = %3
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* @MODE_CBC, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %19, label %15

15:                                               ; preds = %11
  %16 = load i64, i64* %6, align 8
  %17 = load i64, i64* @MODE_CFB1, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %15, %11, %3
  %20 = load i64, i64* %6, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  store i64 %20, i64* %22, align 8
  br label %25

23:                                               ; preds = %15
  %24 = load i32, i32* @BAD_CIPHER_MODE, align 4
  store i32 %24, i32* %4, align 4
  br label %43

25:                                               ; preds = %19
  %26 = load i8*, i8** %7, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %35

28:                                               ; preds = %25
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load i8*, i8** %7, align 8
  %33 = load i32, i32* @RIJNDAEL_MAX_IV_SIZE, align 4
  %34 = call i32 @memcpy(i32 %31, i8* %32, i32 %33)
  br label %41

35:                                               ; preds = %25
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = load i32, i32* @RIJNDAEL_MAX_IV_SIZE, align 4
  %40 = call i32 @memset(i32 %38, i32 0, i32 %39)
  br label %41

41:                                               ; preds = %35, %28
  %42 = load i32, i32* @TRUE, align 4
  store i32 %42, i32* %4, align 4
  br label %43

43:                                               ; preds = %41, %23
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local i32 @memcpy(i32, i8*, i32) #1

declare dso_local i32 @memset(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
